# QEC-Project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: .gitkeep
.github/workflows/: ci.yml
capstone/: README.md
capstone/proposal/: eoi-mock.md  (+2 more)
demos/: 00_grand_tour.ipynb  01_statevec_vs_qiskit.ipynb  02_noise_channels.ipynb  03_stabilizer_demo.ipynb  04_repetition_code.ipynb  05_shor_code.ipynb  06_steane_code.ipynb  07_css_klc.ipynb  08_surface_code_intro.ipynb
docs/: ars-cheatsheet.md  bootstrap-plan.md  glossary.md  long-running-protocol.md  nrc-call-notes.md  reading-list.md  sciskills-active.md  superpowers-cheatsheet.md
notes/: 00-linear-algebra.md  01-single-qubit.md  02-multi-qubit.md  03-density-matrices.md  04-noise-channels.md  05-stabilizer-formalism.md  06-repetition-code.md  07-shor-9qubit.md  08-steane-7qubit.md  09-css-codes.md  10-fault-tolerance.md  11-surface-code.md  12-summary.md  README.md
phase-00-foundations/: README.md
phase-01-quantum-basics/: README.md
phase-02-qec-fundamentals/: README.md
phase-03-topological-codes/: README.md
phase-04-fault-tolerance/: README.md
phase-05-advanced-decoders/: README.md
plans/: .gitkeep  2026-05-15-phase-0-classical-ec.md  2026-05-15-phase-1-noise-channels.md  2026-05-15-phase-2-pauli-steane.md  2026-05-15-phase-3-surface-mwpm.md  phase-00-01-linear-algebra.md  phase-00-02-probability.md  phase-00-03-classical-ec.md  phase-01-01-qubits-gates.md  phase-01-02-multi-qubit-entanglement.md  phase-01-03-density-matrices-noise.md  phase-02-02-shor-9.md
prompts/: ars-disclosure-nrc.md  ars-lit-review-decoders.md  ars-plan-capstone.md  ars-review-eoi.md
qec/: __init__.py  channels.py  pauli.py  stabilizer.py  statevec.py
qiskit_demos/: repetition_qiskit.ipynb
references/: reading_list.md
scripts/: build_kraus_notebook.py  install_plugins.sh  run_threshold_sweep.py  update_changelog.py  verify_reading_list.py
tests/: test_channels.py  test_classical.py  test_classical_codes.py  test_classical_noise.py  test_codes.py  test_density.py  test_info.py  test_linalg.py  test_mwpm.py  test_pauli.py  test_quantum_noise.py  test_shor9.py  test_smoke.py  test_stabilizer.py  test_statevec.py  test_steane.py  test_surface_code.py
(+59 files in other folders)
