[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec"
version = "0.1.0"
description = "A theory-first walk through Quantum Error Correction, with NumPy-from-scratch and Qiskit reference implementations."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tirthesh Jani" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E741"]
