[project]
name = "qec-project"
version = "0.1.0"
description = "Self-study QEC curriculum + decoder capstone targeting NRC Applied Quantum Computing Challenge EOI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "stim>=1.13",
    "pymatching>=2.2",
    "sinter>=1.13",
    "ldpc>=2.1",
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "jupyterlab>=4.2",
    "ipywidgets>=8",
    "requests>=2.32",
]
ml = [
    "torch>=2.4",
    "lightning>=2.4",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "pymc>=5.16",
]
remote = [
    "modal>=0.64",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/qec_project"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
